# novaroad

./: .gitignore  BUILD_AND_RUN.sh  BUILD_FIX_STATUS.md  BUILD_SUCCESS_FINAL.md  CHANGELOG.md  CMakeLists.txt  COMPILE_AND_RUN_APP.sh  CONTRIBUTING.md  CRITICAL_GAPS_FINAL.md  FIX_PATH.sh  INDEX.md  INSTALL.md  LICENSE  Makefile  README.md  RUN_ALL_DEMOS.sh  SELF_HOSTING_ROADMAP.md  _run_bootstrap.sh  _run_bootstrap_v2.sh  _run_bootstrap_v3.sh  _run_check.sh  _run_final.sh  ai_model  bootstrap_direct.txt  build_complete.sh  build_simple.sh  check_tokens  check_tokens.c  compile_commands.json  complete_app  enum_check  enum_check.c  fix_headers.sh  install.sh  mobile_app  nova_bootstrap_stage0  novac_fixed  novac_help_direct.txt  package_opensource.py  t.zn  (+7 more)
benchmarks/: CMakeLists.txt  README.md  benchmark_gpt_backend.c  benchmark_results.json  comprehensive_benchmark.c  comprehensive_benchmark.zn  flash_attention_bench  flash_attention_quick  nova_vs_pytorch.py  nova_vs_pytorch.zn  run_benchmarks.sh  run_real_benchmarks.zn  unit_algebra_benchmark.zn  unit_bench_working.zn  unit_benchmark_simple.zn  visualize_results.py  visualize_text.py
config/: .clang-format  .clang-tidy  .clangd  Cargo.toml  NOVA.json  compile_flags.txt  configure.ac  meson.build  nova.toml  package.json  setup.py
src/ai/: CMakeLists.txt  test_ai_features.c
src/ai/autograd/: autograd.c  autograd.h  tape.c  tape.h
src/ai/distributed/: pipeline_parallel.c  tensor_parallel.c
src/ai/gpt/: nova_gpt_backend.c
src/ai/inference/: inference_engine.c  inference_engine.h  model_loader.c  model_loader.h  model_loader_znm.c  quantization.c  quantization.h
src/compiler/: CMakeLists.txt  borrow_checker.c  builtin_macros.c  contracts.c  core.zn  diagnostics.c  dimensions.c  error_codegen.c  error_handling.c  error_messages.c  error_semantic.c  exhaustiveness.c  flow.c  generics_backend.c  generics_integration.c  macro_expansion.c  main.c  main_simple.c  mod.zn  module_registry.c  monomorphization.c  nova_integration.c  parser_error.c  parser_match.c  pattern.c  pattern_codegen.c  pattern_matching.c  pattern_semantic.c  physics_constants.c  stubs.c  tokens.c  type_unification.c
src/kernel/: CMakeLists.txt
src/native/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists.txt.complete  CMakeLists_cpp_lowering.cmake  COMPLETION_REPORT.md  FINAL_100_PERCENT_REPORT.md  FINAL_COMPLETION_REPORT.md  Makefile  Makefile.complete  Makefile.cpp_lowering  SYNTAX_MIGRATION_REPORT.md  SYNTAX_MIGRATION_SUMMARY.txt  apply_fixes.sh  build_native_backends.sh  build_nova.sh  compile_wasm.sh  debug_backends.sh  run_cpu_benchmarks.sh  run_gpu_benchmarks.sh
src/runtime/: CMakeLists.txt  README.md  nova_context.c  nova_deterministic_kernel.c  nova_deterministic_reduction.c  nova_errors.c  nova_jit.c  nova_parallel.c  nova_runtime_cli.c  nova_runtime_io.c  nova_runtime_net.c  nova_runtime_profiler.c  runtime.c  runtime.h  value.c  value.h
src/security/: CMakeLists.txt  capabilities.c  capabilities.h  sandbox.c  sandbox.h
src/std/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists_ai_test.txt  CMakeLists_gpt.txt  enum_advanced.nova  enum_test.nova  enum_test_simple.nova  enum_test_typed.nova  infer_test.nova  infer_top_test.nova  nova_test.py  nova_test_advanced.py  nova_test_simple.py  nova_test_v2.py  nova_test_v2_advanced.py  run_ci.sh  simple.nova  simple_nova_test.zn  test_ai_module.c  test_ai_module_simple.c  test_gpt_inference.c  test_gpu_flash_attention.c  test_model_loading.c  test_runner.py  tiny_if.zn  verify_cli_capabilities.zn  verify_full_io.zn
tests/benchmarks/: bench_alloc.c  bench_compiler.c  bench_gc.c  bench_jit.c  bench_tensor.c
tests/bootstrap/: 01_stage_pipeline.sh  bootstrap_gate_tests.c
tests/borrow/: 01_shared_borrow.nova  02_copy_types.nova  03_scope_lifetime.nova
tests/compiler_tests/: run_all_tests.sh  test_01_basic_arithmetic.c  test_02_type_system.c  test_03_nested_calls.c  test_04_variables.c  test_05_module.c
tests/determinism/: 01_simple.nova  02_complex.nova  03_multiple_functions.nova
tests/e2e/: 01_hello_world.nova  02_arithmetic.nova  03_functions.nova  04_recursion.nova  05_loops.nova  06_types_i64.nova  07_types_f32.nova  08_types_bool.nova  09_nested_functions.nova  10_multiple_params.nova  11_void_function.nova  12_shadowing.nova
tests/fuzz/: fuzz_jit.c  fuzz_lexer.c  fuzz_parser.c
tests/integration/: abi_gate_tests.c  final_release_gate_verification  final_release_gate_verification.c  test_compile_run.c  test_cross_platform.c  test_ffi_c.c  test_full_stack.zn  test_generics_e2e.zn  test_jit_correctness.c  test_match_e2e.zn  test_ml_complete.c  test_ml_simple.c  test_security_sandbox.c
tests/jit/: 01_smoke.nova
tests/lightning_n/: dgm.zn  test_memory_safety_error.zn  test_pro_opt.zn  test_traits_generics.zn
tests/modules/: 01_simple_module.nova  02_import_basic.nova  03_import_specific.nova  04_import_wildcard.nova
tests/negative/: 01_use_after_move.nova  02_type_mismatch.nova  03_mut_immut_conflict.nova  04_undefined_var.nova  05_undefined_function.nova  06_wrong_arg_count.nova  07_return_type_mismatch.nova  08_missing_return.nova  09_duplicate_param.nova  10_invalid_syntax.nova
tests/stability/: cli_stability_tests.c
tests/unit/: nova_army_full_test  nova_army_v10_platform_test  simple_test.c  simple_test_runner  simple_test_runner.c  test_actor.c  test_alloc.c  test_async.c  test_autograd.c  test_borrow_checker.c  test_borrow_checker_simple.c  test_capabilities.c  test_crypto.c  test_error_parser.c  test_error_types.c  test_framework.c  test_gc.c  test_generics_backend.c  test_hashmap.c  test_ir.c  test_jit.c  test_lexer.c  test_multi.zn  test_nn.c  test_optimizer.c  test_parser.c  test_pattern_parser.c  test_pattern_semantic.c  test_string.c  test_tensor.c  test_typesystem.c  test_vm.c
tools/: CMakeLists.txt
tools/znc/: cli_opts.c  main.c
tools/zndbg/: breakpoint.c  dwarf.c  main.c
tools/znfmt/: main.c
tools/znlsp/: LSP_IMPLEMENTATION_COMPLETE.md  Makefile  README.md  lsp_protocol.c  lsp_protocol.h  main.c  znlsp
tools/znrepl/: main.c
(+4821 files in other folders)
