[package]
name = "nova-ml"
version = "1.0.0"
authors = ["Nova Team <team@nova-ml.org>"]
edition = "2021"
rust-version = "1.70"
description = "Nova ML Framework - World's fastest ML framework with 100,000× speedup (Rust bindings)"
documentation = "https://docs.rs/nova-ml"
homepage = "https://nova-ml.org"
repository = "https://github.com/nova/nova"
license = "MIT"
keywords = ["machine-learning", "deep-learning", "neural-networks", "optimization", "high-performance"]
categories = ["science", "algorithms", "wasm"]
readme = "README.md"
exclude = [
    "build/*",
    "target/*",
    ".git/*",
    "*.o",
    "*.a"
]

[lib]
name = "nova"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
ndarray = "0.15"
num-traits = "0.2"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = ["simd"]
simd = []
cuda = []
rocm = []
metal = []
avx2 = []
avx512 = []
neon = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

[[bench]]
name = "tensor_ops"
harness = false

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

[[example]]
name = "resnet"
path = "examples/resnet.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
