[package]
name = "nova_nova"
version = "0.1.0"
edition = "2021"
authors = ["Nova Team"]
description = "PyTorch nova-style training framework for Nova"
license = "MIT"
repository = "https://github.com/nova/nova_nova"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0"

[lib]
name = "nova_nova"
path = "src/lib.rs"

[[example]]
name = "mnist_example"
path = "examples/mnist_example.rs"

[[example]]
name = "distributed_example"
path = "examples/distributed_example.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
